[package]
name = "nxzr_core"
version = { workspace = true }
description = "NXZR Project: The core module"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
macaddr = "1.0.1"
nxzr_shared = { version = "0.1.0", path = "../nxzr_shared" }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt", "sync", "time", "macros"] }
tracing = "0.1.37"
