[package]
name = "nxzr_device"
version.workspace = true
description = "NXZR project: A collection of tools, actual transport layer and connection helpers"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
macaddr = "1.0.1"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.25.0", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "process",
] }
tracing = "0.1.37"
uuid = "1.3.2"
nxzr_core = { version = "0.1.0", path = "../nxzr_core" }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Devices_Bluetooth",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
libc = "0.2.140"
bluer = { version = "0.15.7", features = ["bluetoothd", "rfcomm"] }
dbus = { version = "0.9.7", features = ["vendored"], optional = true }
systemctl = "0.1.9"
sudo = "0.6.0"

[features]
# Allows `cross` to cross-compile linux-specific crates
cross-linux = ["dep:dbus"]
