[package]
name = "nxzr_device"
version = { workspace = true }
description = "NXZR project: A collection of tools, actual transport layer and connection helpers"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
macaddr = "1.0.1"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.25.0", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "process",
] }
tracing = "0.1.37"
uuid = "1.3.2"
nxzr_core = { version = "0.1.0", path = "../nxzr_core" }
num-derive = "0.3.3"
num-traits = "0.2.15"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.140"
bluer = { version = "0.15.7", features = ["bluetoothd", "rfcomm"] }
dbus = { version = "0.9.7", features = ["vendored"], optional = true }
sudo = "0.6.0"
systemctl = "0.1.9"

[features]
# Allows `cross` to cross-compile linux-specific crates
cross-linux = ["dep:dbus"]
