[package]
name = "nxzr_device"
version = { workspace = true }
description = "NXZR Project: A collection of tools, actual transport layer and connection helpers"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

[dependencies]
thiserror = "1.0.40"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.28.2", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "process",
] }
tracing = "0.1.37"
async-trait = "0.1.68"
bytes = "1.4.0"
uuid = "1.3.2"
macaddr = "1.0.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
nxzr_core = { path = "../nxzr_core" }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.140"
bluer = { version = "0.15.7", features = ["bluetoothd", "rfcomm"] }
dbus = { version = "0.9.7", features = ["vendored"] }
sudo = "0.6.0"
nxzr_shared = { version = "0.1.0", path = "../nxzr_shared", features = [
    "bluer",
] }
