[package]
name = "nxzr_gui"
version.workspace = true
description = "NXZR project: host gui application"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
