[package]
name = "nxzr_gui"
version = { workspace = true }
description = "NXZR Project: Host GUI application"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
directories = "5.0.1"
powershell_script = "1.1.0"
run_script = "0.10.1"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "fs",
    "process",
    "io-util",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
