[package]
name = "nxzr_install"
version = { workspace = true }
description = "NXZR project: Installer helpers"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

[dependencies]
run_script = "0.10.1"
thiserror = "1.0.40"

[target.'cfg(target_os = "linux")'.dependencies]
sudo = "0.6.0"
systemctl = "0.1.9"
