[package]
name = "nxzr_server"
version = { workspace = true }
description = "NXZR Project: Server daemon application"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "signal",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tonic = "0.9.2"
prost = "0.11.9"
tokio-stream = "0.1.14"
nxzr_core = { path = "../nxzr_core" }
nxzr_device = { path = "../nxzr_device" }
nxzr_proto = { path = "../nxzr_proto" }
prost-types = "0.11.9"
clap = { version = "4.3.4", features = ["derive"] }
