[package]
name = "nxzr_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
macaddr = "1.0.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["sync"] }
uuid = "1.3.4"
