[package]
name = "nxzr_shared"
version = { workspace = true }
description = "NXZR Project: Shared utilities across the project"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.68"
macaddr = "1.0.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["sync"] }
uuid = "1.3.4"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.15.7", optional = true }

[features]
bluer = ["dep:bluer"]
