[package]
name = "nxzr_transport"
version.workspace = true
description = "NXZR project: transport module"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
publish = false

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
dbus = { version = "0.9.7", features = ["vendored"] }
libc = "0.2.140"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
