[package]
name = "nxzr_transport"
version.workspace = true
description = "NXZR project: transport module"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
publish = false

[dependencies]
# Making these dependencies optional allows cross-platform development on
# platforms other than `linux`.
bluer = { version = "0.15.7", features = ["l2cap"], optional = true }
dbus = { version = "0.9.7", features = ["vendored"], optional = true }
libc = "0.2.140"
macaddr = "1.0.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.25.0", features = ["rt", "sync", "time", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.15.7", features = ["l2cap"] }
dbus = { version = "0.9.7", features = ["vendored"] }
