[package]
name = "nxzr_gui"
version = { workspace = true }
description = "NXZR Project: Host GUI application"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.3", features = ["window-close", "window-minimize", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["sync", "time", "macros"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
