[package]
name = "nxzr_gui"
version = { workspace = true }
description = "NXZR Project: Host GUI application"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.3", features = ["window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["sync", "time", "macros"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tracing = "0.1.37"
anyhow = "1.0.71"
thiserror = "1.0.40"
tracing-appender = "0.2.2"
directories = "5.0.1"
ringbuf = "0.3.3"
uuid = "1.3.4"
async-trait = "0.1.68"
nxzr_shared = { version = "0.1.0", path = "../../nxzr_shared" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
