[package]
name = "nxzr_gui"
version = { workspace = true }
description = "NXZR Project: Host GUI application"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
tauri = { version = "1.3", features = [
    "window-close",
    "window-maximize",
    "window-minimize",
    "window-start-dragging",
    "window-unmaximize",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
    "process",
    "io-util",
] }
tokio-stream = "0.1.14"
tokio-retry = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tracing = "0.1.37"
anyhow = "1.0.71"
thiserror = "1.0.40"
tracing-appender = "0.2.2"
directories = "5.0.1"
ringbuf = "0.3.3"
uuid = "1.3.4"
async-trait = "0.1.68"
nxzr_shared = { path = "../../nxzr_shared" }
nxzr_proto = { path = "../../nxzr_proto" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tempfile = "3.6.0"
wslapi = "0.1.3"
rust-ini = "0.19.0"
command-group = { version = "2.1.0", features = ["with-tokio"] }
tonic = "0.9.2"

[target.'cfg(windows)'.build-dependencies]
tauri-build = { version = "1.3", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
